--- a/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor/GUI/Windows/Main.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:userControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls"
-        xmlns:expanderControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.ExpanderControls"
+        xmlns:assetTabControls="clr-namespace:DevilDaggersAssetEditor.GUI.UserControls.AssetTabControls"
         mc:Ignorable="d"
         Title="Devil Daggers Asset Editor" Height="900" Width="1600"
 		Loaded="Window_Loaded">
@@ -19,29 +19,29 @@
 		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
 				<TabItem Header="audio">
-					<ScrollViewer>
-						<expanderControls:AudioExpanderControl x:Name="AudioAudioExpanderControl" BinaryFileType="Audio" />
-					</ScrollViewer>
+					<assetTabControls:AudioAssetTabControl x:Name="AudioAudioAssetTabControl" BinaryFileType="Audio" />
 				</TabItem>
 				<TabItem Header="core">
-					<ScrollViewer>
-						<expanderControls:ShadersExpanderControl x:Name="CoreShadersExpanderControl" BinaryFileType="Core" />
-					</ScrollViewer>
+					<assetTabControls:ShadersAssetTabControl x:Name="CoreShadersAssetTabControl" BinaryFileType="Core" />
 				</TabItem>
 				<TabItem Header="dd">
-					<ScrollViewer>
-						<StackPanel>
-							<expanderControls:ModelBindingsExpanderControl x:Name="DDModelBindingsExpanderControl" BinaryFileType="DD" />
-							<expanderControls:ModelsExpanderControl x:Name="DDModelsExpanderControl" BinaryFileType="DD" />
-							<expanderControls:ShadersExpanderControl x:Name="DDShadersExpanderControl" BinaryFileType="DD" />
-							<expanderControls:TexturesExpanderControl x:Name="DDTexturesExpanderControl" BinaryFileType="DD" />
-						</StackPanel>
-					</ScrollViewer>
+					<TabControl>
+						<TabItem Header="Model Bindings">
+							<assetTabControls:ModelBindingsAssetTabControl x:Name="DDModelBindingsAssetTabControl" BinaryFileType="DD" />
+						</TabItem>
+						<TabItem Header="Models">
+							<assetTabControls:ModelsAssetTabControl x:Name="DDModelsAssetTabControl" BinaryFileType="DD" />
+						</TabItem>
+						<TabItem Header="Shaders">
+							<assetTabControls:ShadersAssetTabControl x:Name="DDShadersAssetTabControl" BinaryFileType="DD" />
+						</TabItem>
+						<TabItem Header="Textures">
+							<assetTabControls:TexturesAssetTabControl x:Name="DDTexturesAssetTabControl" BinaryFileType="DD" />
+						</TabItem>
+					</TabControl>
 				</TabItem>
 				<TabItem Header="particle">
-					<ScrollViewer>
-						<expanderControls:ParticlesExpanderControl x:Name="ParticleParticlesExpanderControl" BinaryFileType="Particle" />
-					</ScrollViewer>
+					<assetTabControls:ParticlesAssetTabControl x:Name="ParticleParticlesAssetTabControl" BinaryFileType="Particle" />
 				</TabItem>
 			</TabControl>
 		</ScrollViewer>
