--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -43,29 +43,13 @@
 		</Style.Setters>
 	</Style>
 
-	<Style TargetType="TextBlock">
-		<Style.Setters>
-			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
-		</Style.Setters>
-	</Style>
-	<Style TargetType="TextBlock" x:Key="ParagraphTextBlock">
-		<Style.Setters>
-			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
-			<Setter Property="Padding" Value="6,8,6,8" />
-		</Style.Setters>
-	</Style>
-	<Style TargetType="TextBlock" x:Key="PaddingTextBlock">
-		<Style.Setters>
-			<Setter Property="TextWrapping" Value="WrapWithOverflow" />
-			<Setter Property="Padding" Value="2" />
-			<Setter Property="Margin" Value="0" />
-		</Style.Setters>
-	</Style>
 	<Style TargetType="TextBlock" x:Key="AssetTextBlock">
 		<Style.Setters>
 			<Setter Property="Margin" Value="2" />
+			<Setter Property="Foreground" Value="{StaticResource Text}" />
 		</Style.Setters>
 	</Style>
+
 	<Style TargetType="TextBox" x:Key="CodeTextBox">
 		<Style.Setters>
 			<Setter Property="FontFamily" Value="Consolas" />
