--- a/DevilDaggersAssetEditor.New.Wpf/App.xaml
+++ b/DevilDaggersAssetEditor.New.Wpf/App.xaml
@@ -3,5 +3,10 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 StartupUri="Gui/Windows/MainWindow.xaml">
 	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="pack://application:,,,/DevilDaggersCore.Wpf;component/Themes/Dark.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
 	</Application.Resources>
 </Application>
