--- a/DevilDaggersAssetEditor.New.Wpf/Gui/Windows/MainWindow.xaml
+++ b/DevilDaggersAssetEditor.New.Wpf/Gui/Windows/MainWindow.xaml
@@ -3,9 +3,16 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:userControls="clr-namespace:DevilDaggersAssetEditor.New.Wpf.Gui.UserControls"
 		mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+       Title="Devil Daggers Asset Editor" Height="900" Width="1600">
 	<Grid>
-
+		<Grid.RowDefinitions>
+			<RowDefinition Height="18" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<DockPanel Grid.Row="0">
+			<userControls:MenuBar x:Name="MenuBar" />
+		</DockPanel>
 	</Grid>
 </Window>
