--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Binary file analyzer" Height="1024" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#bbb">
+        Title="Binary file analyzer" Height="1024" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
 	<ScrollViewer>
 		<StackPanel Margin="32">
 			<Border BorderBrush="Black" BorderThickness="2" Width="1264" HorizontalAlignment="Left">
